# rustfication

./: .gitignore  README.md  Rust.code-profile
actix_auth/: .env  Cargo.toml  README.md
actix_auth/src/: database.rs  encrypt.rs  main.rs  secret.env  tokens.rs  user_control.rs  user_model.rs  user_service.rs
api_meter/: Cargo.toml  README.md
api_meter/src/: auth.rs  database.rs  keys.rs  main.rs
api_meter/src/auth/: claims.rs  keys.rs
api_meter/src/database/: connection.rs  queries.rs
api_meter/src/errors/: database.rs  routes.rs
factorial/: README.md
factorial/src/: main.rs
hamming/: Cargo.toml  README.md  hamming_tests.txt
hamming/src/: main.rs
ticket_manager/: Cargo.toml  README.md
ticket_manager/src/: controls.rs  enums.rs  main.rs  storage.rs  ticket.rs
type_calculator/: Cargo.toml  README.md
type_calculator/src/: calc.rs  main.rs  operations.rs  test.rs
type_calculator/src/operations/: addition.rs  division.rs  multiplication.rs  subtraction.rs
warp_api/: Cargo.toml
warp_api/src/: handlers.rs  main.rs  models.rs  routes.rs
word_finder/: Cargo.toml  README.md  song_of_durin_awakening.txt
word_finder/src/: arguments.rs  errors.rs  main.rs
word_finder/src/arguments/: file_reader.rs  help.rs  search.rs
