[package]
name = "actix_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
serde = "1.0.214"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4"
sha3 = "0.10.8"
chrono = "0.4.38"
sea-orm = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
futures-util = "0.3.31"
actix-cors = "0.7.0"
dotenvy = "0.15.0"
