[package]
name = "api_meter"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres","chrono"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
once_cell = "1.20"
rand = "0.8.5"
async-trait = "0.1.84"